--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mariadb": "^2.5.2",
+    "mysql": "^2.18.1",
+    "mysql2": "^2.2.5",
     "nodemon": "^2.0.7",
     "winston": "^3.3.3"
   }
